--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         <h2 class="visually-hidden">About us</h2>
         <ul class="about-list">
           <li class="about-item">
+            <div class="about-thumb">
+              <svg class="about-icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
+            </div>
             <h3 class="about-subtitle">Strategy</h3>
             <p class="about-text">
               Our goal is to identify the business problem to walk away with the
@@ -59,6 +64,11 @@
             </p>
           </li>
           <li class="about-item">
+            <div class="about-thumb">
+              <svg class="about-icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-clock" ></use>
+              </svg>
+            </div>
             <h3 class="about-subtitle">Punctuality</h3>
             <p class="about-text">
               Bring the key message to the brand's audience for the best price
@@ -66,6 +76,11 @@
             </p>
           </li>
           <li class="about-item">
+            <div class="about-thumb">
+              <svg class="about-icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram" ></use>
+              </svg>
+            </div>
             <h3 class="about-subtitle">Diligence</h3>
             <p class="about-text">
               Research and confirm brands that present the strongest digital
@@ -73,6 +88,11 @@
             </p>
           </li>
           <li class="about-item">
+            <div class="about-thumb">
+              <svg class="about-icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-astronaut" ></use>
+              </svg>
+            </div>
             <h3 class="about-subtitle">Technologies</h3>
             <p class="about-text">
               Design practice focused on digital experiences. We bring forth a
@@ -94,6 +114,38 @@
               <h3 class="team-subtitle">Mark Guerrero</h3>
               <p class="team-text">Product Designer</p>
             </div>
+            <div class="icon-container">
+              <ul class="icon-list">
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram" ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="team-item">
             <img src="./images/ourteam/img2.jpg" class="team-img" alt="Tom Ford - Frontend Developer" width="264"
@@ -101,6 +153,38 @@
             <div class="team-card">
               <h3 class="team-subtitle">Tom Ford</h3>
               <p class="team-text">Frontend Developer</p>
+            </div>
+            <div>
+              <ul class="icon-list">
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-item">
@@ -110,6 +194,38 @@
               <h3 class="team-subtitle">Camila Garcia</h3>
               <p class="team-text">Marketing</p>
             </div>
+            <div>
+              <ul class="icon-list">
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="team-item">
             <img src="./images/ourteam/img4.jpg" class="team-img" alt="Daniel Wilson - UI Designer" width="264"
@@ -117,6 +233,38 @@
             <div class="team-card">
               <h3 class="team-subtitle">Daniel Wilson</h3>
               <p class="team-text">UI Designer</p>
+            </div>
+            <div>
+              <ul class="icon-list">
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="icon-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
         </ul>
@@ -181,12 +329,50 @@
   </main>
 
   <footer class="footer">
-    <div class="container footer-container"><a class="logo footer-logo" href="./index.html">Web<span
-          class="logo-part">Studio</span></a>
-      <p class="footer-text footer-textcolor">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <div class="container footer-container">
+      <div class="logo-container">
+        <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
+        <p class="footer-text footer-textcolor">
+          Increase the flow of customers and sales for your business with digital
+          marketing & growth solutions.
+        </p>
+      </div>
+      <div class="social-container">
+        <p class="footer-social">Social media</p>
+        <ul class="icon-list footer-icon">
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="icon-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="icon-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="icon-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="icon-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        </div>
+        </li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
