--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <li class="about-item">
             <div class="about-thumb">
               <svg class="about-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-clock" ></use>
+                <use href="./images/icons.svg#icon-clock"></use>
               </svg>
             </div>
             <h3 class="about-subtitle">Punctuality</h3>
@@ -78,7 +78,7 @@
           <li class="about-item">
             <div class="about-thumb">
               <svg class="about-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-diagram" ></use>
+                <use href="./images/icons.svg#icon-diagram"></use>
               </svg>
             </div>
             <h3 class="about-subtitle">Diligence</h3>
@@ -90,7 +90,7 @@
           <li class="about-item">
             <div class="about-thumb">
               <svg class="about-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-astronaut" ></use>
+                <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>
             </div>
             <h3 class="about-subtitle">Technologies</h3>
@@ -119,7 +119,7 @@
                 <li class="icon-item">
                   <a href="" class="icon-link">
                     <svg class="icon-svg" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram" ></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
@@ -276,48 +276,72 @@
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list">
           <li class="portfolio-item">
-            <img src="./images/ourportfolio/img1.jpg" class="portfolio-img" alt="Banking App - App" width="360"
-              height="300">
+            <div class="portfolio-thumb">
+              <img src="./images/ourportfolio/img1.jpg" class="portfolio-img" alt="Banking App - App" width="360"
+                height="300">
+              <p class="portfolio-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
             <div class="portfolio-card">
               <h3 class="portfolio-subtitle">Banking App</h3>
               <p class="portfolio-text">App</p>
             </div>
           </li>
           <li class="portfolio-item">
-            <img src="./images/ourportfolio/img2.jpg" class="portfolio-img" alt="Cashless Payment - Marketing"
-              width="360" height="300">
+            <div class="portfolio-thumb">
+              <img src="./images/ourportfolio/img2.jpg" class="portfolio-img" alt="Cashless Payment - Marketing"
+                width="360" height="300">
+              <p class="portfolio-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
             <div class="portfolio-card">
               <h3 class="portfolio-subtitle">Cashless Payment</h3>
               <p class="portfolio-text">Marketing</p>
             </div>
           </li>
           <li class="portfolio-item">
-            <img src="./images/ourportfolio/img3.jpg" class="portfolio-img" alt="Meditation App - App" width="360"
-              height="300">
+            <div class="portfolio-thumb">
+              <img src="./images/ourportfolio/img3.jpg" class="portfolio-img" alt="Meditation App - App" width="360"
+                height="300">
+              <p class="portfolio-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
             <div class="portfolio-card">
               <h3 class="portfolio-subtitle">Meditation App</h3>
               <p class="portfolio-text">App</p>
             </div>
           </li>
           <li class="portfolio-item">
-            <img src="./images/ourportfolio/img4.jpg" class="portfolio-img" alt="Taxi Service - Marketing" width="360"
-              height="300">
+            <div class="portfolio-thumb">
+              <img src="./images/ourportfolio/img4.jpg" class="portfolio-img" alt="Taxi Service - Marketing" width="360"
+                height="300">
+              <p class="portfolio-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
             <div class="portfolio-card">
               <h3 class="portfolio-subtitle">Taxi Service</h3>
               <p class="portfolio-text">Marketing</p>
             </div>
           </li>
           <li class="portfolio-item">
-            <img src="./images/ourportfolio/img5.jpg" class="portfolio-img" alt="Screen Illustrations - Design"
-              width="360" height="300">
+            <div class="portfolio-thumb">
+              <img src="./images/ourportfolio/img5.jpg" class="portfolio-img" alt="Screen Illustrations - Design"
+                width="360" height="300">
+              <p class="portfolio-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
             <div class="portfolio-card">
               <h3 class="portfolio-subtitle">Screen Illustrations</h3>
               <p class="portfolio-text">Design</p>
             </div>
           </li>
           <li class="portfolio-item">
-            <img src="./images/ourportfolio/img6.jpg" class="portfolio-img" alt="Online Courses - Marketing" width="360"
-              height="300">
+            <div class="portfolio-thumb">
+              <img src="./images/ourportfolio/img6.jpg" class="portfolio-img" alt="Online Courses - Marketing"
+                width="360" height="300">
+              <p class="portfolio-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
             <div class="portfolio-card">
               <h3 class="portfolio-subtitle">Online Courses</h3>
               <p class="portfolio-text">Marketing</p>
@@ -341,38 +365,38 @@
         <p class="footer-social">Social media</p>
         <ul class="icon-list footer-icon">
           <li class="icon-item">
-            <a href="" class="icon-link">
+            <a href="" class="icon-link footer-icon-link">
               <svg class="icon-svg" width="24" height="24">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="icon-item">
-            <a href="" class="icon-link">
+            <a href="" class="icon-link footer-icon-link">
               <svg class="icon-svg" width="24" height="24">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="icon-item">
-            <a href="" class="icon-link">
+            <a href="" class="icon-link footer-icon-link">
               <svg class="icon-svg" width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="icon-item">
-            <a href="" class="icon-link">
+            <a href="" class="icon-link footer-icon-link">
               <svg class="icon-svg" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </a>
           </li>
         </ul>
-        </div>
-        </li>
-        </ul>
       </div>
+      </li>
+      </ul>
+    </div>
     </div>
   </footer>
 </body>
